Fixing layout issue for images the can not be rendered by the browser.

--- a/src-gwt/org/opencms/ade/galleries/client/ui/css/galleryResultItem.css
+++ b/src-gwt/org/opencms/ade/galleries/client/ui/css/galleryResultItem.css
@@ -24,6 +24,8 @@
 }
 .tilingList div.imageTile, .tilingList div.imageTile img {
 	display: block;
+	width: 142px;
+	height: 100px;
 }
 
 .tilingList .tilingItem{
